# pcsxr

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  Dockerfile.clang  Dockerfile.gcc  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  configure  configure.ac
cmake/: FindCdio.cmake  FindFFMPEG.cmake
data/: Makefile.am  Makefile.in  pcsx.desktop  pcsx.glade2  pcsxr.desktop  pcsxr.glade2  pcsxr.ui
debian/: changelog  control  rules
debian-upstream/: control  copyright  pcsxr.menu  rules
doc/: CMakeLists.txt  Makefile.am  Makefile.in  keys.txt  pcsx.1  pcsxr.1  tweaks.txt
gui/: AboutDlg.c  AboutDlg.h  CMakeLists.txt  Cheat.c  Cheat.h  ConfDlg.c  ConfDlg.h  Config.c  DebugMemory.c  DebugMemory.h  Gtk2Gui.c  GtkGui.c  Linux.h  LnxMain.c  Makefile.am  Makefile.in  MemcardDlg.c  MemcardDlg.h  Plugin.c  gdk-compat.h  hdebug.c  hdebug.h  nopic.h
gui/data/: Makefile.am  pcsxr.ui
gui/data/pixmaps/: Makefile.am
gui/po/: CMakeLists.txt  es.po  fr.po  hu.po  it.po  pt_BR.po  zh_CN.po  zh_TW.po
include/: config.h.in
libpcsxcore/: CMakeLists.txt  Makefile.am  Makefile.in  cdriso.c  cdriso.h  cdrom.c  cdrom.h  cheat.c  cheat.h  coff.h  debug.c  debug.h  decode_xa.c  decode_xa.h  disr3000a.c  ecm.h  gpu.c  gpu.h  gte.c  gte.h  gte_divider.h  mdec.c  mdec.h  misc.c  misc.h  pgxp_cpu.c  pgxp_cpu.h  pgxp_debug.c  pgxp_debug.h  pgxp_gte.c  pgxp_gte.h  pgxp_mem.c  pgxp_mem.h  pgxp_value.c  pgxp_value.h  plugin_common.h  plugins.c  plugins.h  ppf.c  ppf.h  (+27 more)
libpcsxcore/ix86/: iGte.h  iPGXP.h  iR3000A.c  ix86.c  ix86.h
libpcsxcore/ix86_64/: README  iGte.h  iPGXP-64.h  iR3000A-64.c  ix86-64.c  ix86-64.h  ix86_cpudetect.c  ix86_fpu.c  ix86_mmx.c  ix86_sse.c
libpcsxcore/ppc/: pGte.h  pR3000A.c  pasm.s  ppc.c  ppc.h  reguse.c
macosx/: ARCBridge.h  CheatController.h  CheatController.m  ConfigurationController.h  ConfigurationController.m  EmuThread.h  EmuThread.m  ExtendedKeys.h  HotkeyController.h  HotkeyController.m  Info.plist  LaunchArg.h  LaunchArg.m  MemBadgeView.h  MemBadgeView.m  OSXPlugLocalization.h  PcsxController.h  PcsxController.m  PcsxPlugin.h  PcsxPlugin.m  Pcsxr-Debug.xcconfig  Pcsxr-Instrument.xcconfig  Pcsxr-Release.xcconfig  Pcsxr.xcconfig  PcsxrCheatHandler.h  PcsxrCheatHandler.m  PcsxrController.h  PcsxrController.m  PcsxrDiscHandler.h  PcsxrDiscHandler.m  PcsxrFileHandle.h  PcsxrFreezeStateHandler.h  PcsxrFreezeStateHandler.m  PcsxrHexadecimalFormatter.h  PcsxrHexadecimalFormatter.m  PcsxrMemCardArray.h  PcsxrMemCardArray.m  PcsxrMemCardController.h  PcsxrMemCardController.m  PcsxrMemCardDocument.h  (+24 more)
macosx/Base.lproj/: CheatWindow.xib  PcsxrMemCardDocument.xib
macosx/Configs/: Pcsxr-Debug.xcconfig  Pcsxr-Instrument.xcconfig  Pcsxr-Release.xcconfig  Pcsxr.xcconfig
macosx/English.lproj/: AddPluginSheet.xib  CheatWindow.xib  Configuration.xib  Credits.rtf  InfoPlist.strings  Localizable.strings  MemCardManager.xib  PCSXR.xib  PcsxrMemCardDocument.xib
macosx/Pcsx.xcodeproj/: project.pbxproj
pcsxr/: configure  configure.ac
pixmaps/: Makefile.am  Makefile.in
plugins/: CMakeLists.txt
plugins/bladesio1/: CMakeLists.txt  Makefile.am  Makefile.in  cfg.c  connection.c  connection.h  fifo.c  fifo.h  gui.c  settings.c  settings.h  sio1.c  sio1.glade2  sio1.h  sio1.ui
plugins/dfOpenGL/: AUTHORS  GPU.c  GPU.h  Makefile.am  Makefile.in  PSEmu_PlugIn_Defs.h  TODO  cfg.c  cfg.h  fps.c  gllog.c  gpu_i.h  oldMakefile  primitive_drawing.c  primitive_drawing.h
plugins/dfOpenGL/gpucfg-0.1df/: dfopengl.glade2  main.c
plugins/dfcdrom/: CMakeLists.txt  Makefile.am  Makefile.in  callbacks.c  callbacks.h  cdr-freebsd.c  cdr-libcdio.c  cdr-linux.c  cdr-null.c  cdr-solaris.c  cdr.c  cdr.h  cfg-gtk2.c  cfg.c  cfgCdr.glade  interface.c  interface.h  main.c  support.c  util.c
plugins/dfcdrom/cdrcfg-0.1df/: callbacks.c  cfg-gtk2.c  cfgCdr.glade  dfcdrom.glade2  dfcdrom.ui  interface.c  main.c
plugins/dfinput/: CMakeLists.txt  Makefile.am  Makefile.in  analog.c  cfg-gtk.c  cfg-gtk2.c  cfg.c  dfinput.glade2  dfinput.ui  pad.c  pad.h  padjoy.h  sdljoy.c  util.c  util.h  xkb.c
plugins/dfnet/: CMakeLists.txt  Makefile.am  Makefile.in  cfg.c  dfnet.c  dfnet.glade2  dfnet.h  dfnet.ui  gui.c  unix.c
plugins/dfsound/: CMakeLists.txt  Makefile.am  Makefile.in  adsr.c  adsr.h  alsa.c  alsa.h  cfg.c  cfg.h  dma.c  dsoundoss.h  externals.c  externals.h  freeze.c  nullsnd.c  openal.c  oss.c  oss.h  psemu.c  psemuxa.h  pulseaudio.c  pulseaudiosimple.c  registers.c  registers.h  reverb.c  reverb.h  sdl.c  spu.c  spu.h  stdafx.h  xa.c  xa.h
plugins/dfsound/spucfg-0.1df/: dfsound.glade2  dfsound.ui  main.c
plugins/dfxvideo/: CMakeLists.txt  Makefile.am  Makefile.in  cfg.c  cfg.h  draw.c  draw.h  externals.h  fps.c  gpu.c  hq3x.h  interp.h  key.c  menu.c  prim.c  soft.c  zn.c
plugins/dfxvideo/gpucfg-0.1df/: dfxvideo.glade2  dfxvideo.ui  main.c
plugins/gxvideo/: Makefile  Makefile.am  Makefile.in  cfg.c  cfg.h  draw.c  draw.h  fps.c  fps.h  globals.c  globals.h  gpu.c  gpu.h  gpu_utils.h  interp.h  key.c  menu.c  prim.c  prim.h  soft.c  soft.h  swap.h
plugins/gxvideo/gpucfg/: gxvideo.glade  main.c
plugins/nullsio1/: CMakeLists.txt  Makefile.am  sio1.c  typedefs.h
plugins/peopsxgl/: CMakeLists.txt  Makefile.am  Makefile.in  cfg.c  cfg.h  draw.c  draw.h  externals.h  fps.c  fps.h  gl_ext.h  gpu.c  gpu.h  gte_accuracy.c  gte_accuracy.h  key.c  key.h  menu.c  pgxp_gpu.c  pgxp_gpu.h  prim.c  prim.h  soft.c  soft.h  stdafx.h  texture.c  texture.h
plugins/peopsxgl/gpucfg/: callbacks.c  gpucfg-newstyle2.glade  interface.c  main.c  peopsxgl.ui
po/: CMakeLists.txt  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  es.po  fr.po  fr_FR.po  hu.po  hu_HU.po  it.po  ko_KR.po  pcsx.pot  pcsxr.pot  pt_BR.gmo  pt_BR.po  ru.po  ru_RU.po  update-pot.sh  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
win32/: config.h  pcsx.dev  pcsx.dsp  pcsx.dsw  pcsx.rc  pcsx.sln  pcsx.vcproj  pcsxr.dev  pcsxr.dsp  pcsxr.dsw  pcsxr.rc  pcsxr.sln  pcsxr.vcproj  pcsxr.vcxproj  pcsxr.vcxproj.filters  resource.h
(+672 files in other folders)
