SUBDIRS = data doc po libpcsxcore gui pixmaps
SUBDIRS += plugins/dfinput plugins/dfsound
SUBDIRS += plugins/dfxvideo plugins/dfcdrom plugins/dfnet

SUBDIRS += plugins/bladesio1 plugins/gxvideo

SUBDIRS += $(PEOPSXGL)

EXTRA_DIST = AUTHORS COPYING INSTALL NEWS README ChangeLog ChangeLog.df strip_fPIC.sh
