SUBDIRS =  data     
SUBDIRS += doc
SUBDIRS += pixmaps
SUBDIRS += po
SUBDIRS += libpcsxcore
SUBDIRS += gui
SUBDIRS += plugins/dfinput
SUBDIRS += plugins/dfsound
SUBDIRS += plugins/dfxvideo 
SUBDIRS += plugins/dfcdrom
SUBDIRS += plugins/dfnet
SUBDIRS += plugins/bladesio1

SUBDIRS += $(PEOPSXGL)

EXTRA_DIST = AUTHORS COPYING INSTALL NEWS README ChangeLog ChangeLog.df strip_fPIC.sh
