SUBDIRS =  data
SUBDIRS += doc
SUBDIRS += pixmaps
SUBDIRS += po
SUBDIRS += libpcsxcore
SUBDIRS += gui
SUBDIRS += plugins/dfinput
SUBDIRS += plugins/dfsound
SUBDIRS += plugins/dfxvideo 
SUBDIRS += plugins/dfcdrom
SUBDIRS += plugins/dfnet

SUBDIRS += $(BLADESIO1)
SUBDIRS += $(PEOPSXGL)

DIST_SUBDIRS = $(SUBDIRS) plugins/bladesio1 plugins/peopsxgl

EXTRA_DIST = AUTHORS COPYING INSTALL NEWS README ChangeLog ChangeLog.df strip_fPIC.sh
