install(FILES pcsxr.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1)
install(FILES keys.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/pcsxr)
install(FILES tweaks.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/pcsxr)

install(FILES ../AUTHORS DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/pcsxr)
install(FILES ../COPYING DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/pcsxr)
install(FILES ../README DESTINATION ${CMAKE_INSTALL_PREFIX}/share/doc/pcsxr)

