pixmapdir = "$(datadir)/pcsxr"
pixmap_DATA = pcsxr.png iso-open.png iso-reopen.png cd.png cdr.png gpu.png memcard.png pad.png play.png sio1.png spu.png

icondir = "$(datadir)/pixmaps"
icon_DATA = pcsxr-icon.png

EXTRA_DIST = pcsxr.png iso-open.png iso-reopen.png cd.png cdr.png gpu.png memcard.png pad.png play.png sio1.png spu.png pcsxr-icon.png
